[JIRA] TH2-508. Add possible to parse output messages to single or batch